--- a/src/www/account/connect/create-stripe-account.html
+++ b/src/www/account/connect/create-stripe-account.html
@@ -53,7 +53,7 @@
     </template>
     <template id="unknown-error">
       <div class="error message" translate="yes">
-        Error! An error occurred creating the registration
+        Error! An unknown error occurred
       </div>
     </template>
     <template id="invalid-country">
