--- a/src/www/account/connect/edit-stripe-account.html
+++ b/src/www/account/connect/edit-stripe-account.html
@@ -439,12 +439,12 @@
     </template>
     <template id="upload-error">
       <div class="error message" translate="yes">
-        Error! An error occurred uploading document images
+        Error! An unknown error occurred
       </div>
     </template>
     <template id="invalid-token">
       <div class="error message" translate="yes">
-        Error! An error occurred submitting the form
+        Error! An unknown error occurred
       </div>
     </template>
     <template id="invalid-business_profile_url">
@@ -730,6 +730,26 @@
     <template id="invalid-company_verification_document_back">
       <div class="error message" translate="yes">
         Error! Invalid or missing document back scan or photo
+      </div>
+    </template>
+    <template id="unknown-error">
+      <div class="error message" translate="yes">
+        Error! An unknown error occurred
+      </div>
+    </template>
+    <template id="no-required-information">
+      <div class="error message" translate="yes">
+        No information is required for this Stripe account
+      </div>
+    </template>
+    <template id="invalid-stripeid">
+      <div class="error message" translate="yes">
+        Error! An invalid Stripe account was specified
+      </div>
+    </template>
+    <template id="invalid-account">
+      <div class="error message" translate="yes">
+        Error! You cannot edit someone else's Stripe account
       </div>
     </template>
     <template id="invalid-csrf-token">
