--- a/src/www/account/connect/person.html
+++ b/src/www/account/connect/person.html
@@ -53,5 +53,20 @@
         </tbody>
       </table>
     </div>
+    <template id="unknown-error">
+      <div class="error message" translate="yes">
+        Error! An unknown error occurred
+      </div>
+    </template>
+    <template id="invalid-personid">
+      <div class="error message" translate="yes">
+        Error! An invalid person was specified
+      </div>
+    </template>
+    <template id="invalid-account">
+      <div class="error message" translate="yes">
+        Error! You cannot edit people for someone else's Stripe account
+      </div>
+    </template>
   </body>
 </html>
