--- a/src/www/account/connect/submit-stripe-account.html
+++ b/src/www/account/connect/submit-stripe-account.html
@@ -103,12 +103,12 @@
     </template>
     <template id="invalid-company-owners">
       <div class="error message" translate="yes">
-        Error! You must submit the company's company owners
+        Error! You must submit the company's owners
       </div>
     </template>
     <template id="invalid-company-representative">
       <div class="error message" translate="yes">
-        Error! You must submit the company representative's information
+        Error! You must submit the representative's information
       </div>
     </template>
     <template id="invalid-payment-details">
@@ -123,7 +123,22 @@
     </template>
     <template id="unknown-error">
       <div class="error message" translate="yes">
-        Error! An error occurred submitting the registration
+        Error! An unknown error occurred
+      </div>
+    </template>
+    <template id="invalid-stripeid">
+      <div class="error message" translate="yes">
+        Error! An invalid Stripe account was specified
+      </div>
+    </template>
+    <template id="not-required">
+      <div class="error message" translate="yes">
+        Error! This Stripe account does not require submission
+      </div>
+    </template>
+    <template id="invalid-account">
+      <div class="error message" translate="yes">
+        Error! You cannot submit someone else's Stripe account
       </div>
     </template>
     <template id="invalid-csrf-token">
