--- a/src/www/administrator/connect/payout.html
+++ b/src/www/administrator/connect/payout.html
@@ -83,5 +83,15 @@
     <template id="account_closed">
       <span translate="yes">Bank account closed</span>
     </template>
+    <template id="unknown-error">
+      <div class="error message" translate="yes">
+        Error! An unknown error occurred
+      </div>
+    </template>
+    <template id="invalid-payoutid">
+      <div class="error message" translate="yes">
+        Error! An invalid payout was specified
+      </div>
+    </template>
   </body>
 </html>
