--- a/src/www/administrator/connect/stripe-account.html
+++ b/src/www/administrator/connect/stripe-account.html
@@ -89,5 +89,15 @@
     <template id="disabled">
       <span><span translate="yes">Disabled by Stripe, see</span>&nbsp;<a href="https://stripe.com/blog/why-some-businesses-arent-allowed" translate="yes">common reasons</a></span>
     </template>
+    <template id="unknown-error">
+      <div class="error message" translate="yes">
+        Error! An unknown error occurred
+      </div>
+    </template>
+    <template id="invalid-stripeid">
+      <div class="error message" translate="yes">
+        Error! An invalid Stripe account was specified
+      </div>
+    </template>
   </body>
 </html>
