--- a/src/www/account/connect/edit-payment-information.html
+++ b/src/www/account/connect/edit-payment-information.html
@@ -371,11 +371,6 @@
         Success! The payment information has been updated
       </div>
     </template>
-    <template id="unknown-error">
-      <div class="error message" translate="yes">
-        Error! An error occurred updating the payment information
-      </div>
-    </template>
     <template id="invalid-country">
       <div class="error message" translate="yes">
         Error! Invalid or missing country of bank
@@ -444,6 +439,22 @@
     <template id="invalid-transit_number">
       <div class="error message" translate="yes">
         Error! Invalid or missing transit number
+      </div>
+    </template>
+
+    <template id="unknown-error">
+      <div class="error message" translate="yes">
+        Error! An unknown error occurred
+      </div>
+    </template>
+    <template id="invalid-stripeid">
+      <div class="error message" translate="yes">
+        Error! An invalid Stripe account was specified
+      </div>
+    </template>
+    <template id="invalid-account">
+      <div class="error message" translate="yes">
+        Error! You cannot update payment information for someone else's Stripe account
       </div>
     </template>
     <template id="invalid-csrf-token">
