--- a/src/www/administrator/connect/delete-stripe-account.html
+++ b/src/www/administrator/connect/delete-stripe-account.html
@@ -25,7 +25,12 @@
     </template>
     <template id="unknown-error">
       <div class="error message" translate="yes">
-        Error! An error occurred deleting the Stripe account
+        Error! An unknown error occurred
+      </div>
+    </template>
+    <template id="invalid-stripeid">
+      <div class="error message" translate="yes">
+        Error! An invalid Stripe account was specified
       </div>
     </template>
     <template id="invalid-csrf-token">
