fix: remove "required" from address line2

--- a/src/www/account/connect/edit-stripe-account.html
+++ b/src/www/account/connect/edit-stripe-account.html
@@ -105,7 +105,7 @@
           <div id="company_address_line2-container" class="input-fields">
             <label class="field-label" for="company_address_line2" translate="yes">Line 2</label>
             <div class="field">
-              <input required="required" id="company_address_line2" name="company_address_line2" type="text" maxlength="100">
+              <input id="company_address_line2" name="company_address_line2" type="text" maxlength="100">
             </div>
           </div>
           <div id="company_address_city-container" class="input-fields">
@@ -323,7 +323,7 @@
             <div id="individual_address_line2-container" class="input-fields">
               <label class="field-label" for="individual_address_line2" translate="yes">Line 2</label>
               <div class="field">
-                <input required="required" id="individual_address_line2" name="individual_address_line2" type="text" maxlength="100">
+                <input id="individual_address_line2" name="individual_address_line2" type="text" maxlength="100">
               </div>
             </div>
             <div id="individual_address_city-container" class="input-fields">
