Add note for registration requiring information

--- a/src/www/account/connect/stripe-account.html
+++ b/src/www/account/connect/stripe-account.html
@@ -168,6 +168,9 @@
     <template id="unstarted-registration">
       <p translate="yes">The registration information has not been provided.</p>
     </template>
+    <template id="requires-registration-information">
+      <p translate="yes">Some required information has not been provided yet.</p>
+    </template>
     <template id="completed-registration">
       <p translate="yes">The registration information has been provided.</p>
     </template>
