fix: add formnovalidate to refresh country button

--- a/src/www/account/connect/edit-payment-information.html
+++ b/src/www/account/connect/edit-payment-information.html
@@ -28,7 +28,7 @@
                 </select>
               </div>
             </div>
-            <button name="refresh" value="true" class="small-button">Refresh</button>
+            <button type="submit" name="refresh" value="true" class="small-button" formnovalidate="formnovalidate">Refresh</button>
           </div>
         </div>
         <div class="input-fields">
