fix field indentation

--- a/src/www/account/connect/edit-stripe-account.html
+++ b/src/www/account/connect/edit-stripe-account.html
@@ -82,15 +82,19 @@
               <input required="required" id="company_phone" name="company_phone" type="text" maxlength="50">
             </div>
           </div>
-          <div id="company-document-container" class="input-fields">
+          <div id="company-document-container">
             <h2 translate="yes">Company incorporation</h2>
-            <label class="field-label" for="company_verification_document_front" translate="yes">Front scan/photo</label>
-            <div class="field">
-              <input name="company_verification_document_front" id="company_verification_document_front" type="file">
+            <div class="input-fields">
+              <label class="field-label" for="company_verification_document_front" translate="yes">Front scan/photo</label>
+              <div class="field">
+                <input name="company_verification_document_front" id="company_verification_document_front" type="file">
+              </div>
             </div>
-            <label class="field-label" for="company_verification_document_back" translate="yes">Back scan/photo</label>
-            <div class="field">
-              <input name="company_verification_document_back" id="company_verification_document_back" type="file">
+            <div class="input-fields">
+              <label class="field-label" for="company_verification_document_back" translate="yes">Back scan/photo</label>
+              <div class="field">
+                <input name="company_verification_document_back" id="company_verification_document_back" type="file">
+              </div>
             </div>
           </div>
           <div id="company-address-container">
