refactor: offset submit buttons & reword unknown-error

--- a/src/www/account/connect/create-person.html
+++ b/src/www/account/connect/create-person.html
@@ -43,8 +43,11 @@
               </div>
             </div>
           </div>
-          <div class="form-buttons">
-            <button id="submit-button" class="button" translate="yes">Update registration</button>
+          <div class="input-fields">
+            <label class="field-label"></label>
+            <div class="form-buttons">
+              <button id="submit-button" type="submit" class="button" translate="yes">Create person</button>
+            </div>
           </div>
         </div>
       </form>
@@ -86,7 +89,7 @@
     </template>
     <template id="unknown-error">
       <div class="error message" translate="yes">
-        Error! An unknown error occurred
+        Error! Something went wrong submitting the form
       </div>
     </template>
     <template id="invalid-stripeid">
