--- a/src/www/account/connect/create-stripe-account.html
+++ b/src/www/account/connect/create-stripe-account.html
@@ -41,8 +41,11 @@
             </select>
           </div>
         </div>
-        <div class="form-buttons">
-          <button id="submit-button" class="button" translate="yes">Start registration</button>
+        <div class="input-fields">
+          <label class="field-label"></label>
+          <div class="form-buttons">
+            <button id="submit-button" type="submit" class="button" translate="yes">Create registration</button>
+          </div>
         </div>
       </form>
     </div>
@@ -53,7 +56,7 @@
     </template>
     <template id="unknown-error">
       <div class="error message" translate="yes">
-        Error! An unknown error occurred
+        Error! Something went wrong submitting the form
       </div>
     </template>
     <template id="invalid-country">
