--- a/src/www/account/connect/submit-company-directors.html
+++ b/src/www/account/connect/submit-company-directors.html
@@ -55,7 +55,7 @@
     </template>
     <template id="unknown-error">
       <div class="error message" translate="yes">
-        Error! An unknown error occurred
+        Error! Something went wrong submitting the form
       </div>
     </template>
     <template id="invalid-stripeid">
