--- a/src/www/account/connect/edit-payment-information.html
+++ b/src/www/account/connect/edit-payment-information.html
@@ -351,8 +351,11 @@
             </div>
           </div>
         </div>
-        <div class="form-buttons">
-          <button id="submit-button" class="button" translate="yes">Save payment information</button>
+        <div class="input-fields">
+          <label class="field-label"></label>
+          <div class="form-buttons">
+            <button id="submit-button" type="submit" class="button" translate="yes">Update payment information</button>
+          </div>
         </div>
       </form>
     </div>
@@ -444,7 +447,7 @@
 
     <template id="unknown-error">
       <div class="error message" translate="yes">
-        Error! An unknown error occurred
+        Error! Something went wrong submitting the form
       </div>
     </template>
     <template id="invalid-stripeid">
