--- a/src/www/account/connect/edit-person.html
+++ b/src/www/account/connect/edit-person.html
@@ -265,8 +265,11 @@
               </div>
             </div>
           </div>
-          <div class="form-buttons">
-            <button id="submit-button" class="button" translate="yes">Update registration</button>
+          <div class="input-fields">
+            <label class="field-label"></label>
+            <div class="form-buttons">
+              <button id="submit-button" type="submit" class="button" translate="yes">Update person</button>
+            </div>
           </div>
         </div>
       </form>
@@ -463,7 +466,7 @@
     </template>
     <template id="unknown-error">
       <div class="error message" translate="yes">
-        Error! An unknown error occurred
+        Error! Something went wrong submitting the form
       </div>
     </template>
     <template id="no-required-information">
