--- a/src/www/administrator/connect/reject-stripe-account.html
+++ b/src/www/administrator/connect/reject-stripe-account.html
@@ -34,8 +34,11 @@
             </select>
           </div>
         </div>
-        <div class="form-buttons">
-          <button id="submit-button" class="button" translate="yes">Reject</button>
+        <div class="input-fields">
+          <label class="field-label"></label>
+          <div class="form-buttons">
+            <button id="submit-button" type="submit" class="button" translate="yes">Reject Stripe account</button>
+          </div>
         </div>
       </form>
     </div>
@@ -93,7 +96,7 @@
     </template>    
     <template id="unknown-error">
       <div class="error message" translate="yes">
-        Error! An unknown error occurred
+        Error! Something went wrong submitting the form
       </div>
     </template>
     <template id="invalid-stripeid">
