fix: button requires type attribute for css

--- a/src/www/account/connect/edit-payment-information.html
+++ b/src/www/account/connect/edit-payment-information.html
@@ -22,9 +22,7 @@
             <div class="normal-field adjacent">
               <div>
                 <select class="country" name="country" id="country">
-                  <option value="" translate="yes">
-                    Select
-                  </option>
+                  <option value="" translate="yes">Select</option>
                 </select>
               </div>
             </div>
