--- a/src/www/account/connect/submit-company-executives.html
+++ b/src/www/account/connect/submit-company-executives.html
@@ -31,7 +31,7 @@
       <form id="submit-form" method="post" class="input-form" action="/account/connect/submit-company-executives?stripeid=${stripeAccount.id}" name="submit-form">
         <input type="hidden" name="csrf-token" />
         <div class="form-buttons">
-          <button id="submit-button" class="button" translate="yes">Submit executives</button>
+          <button id="submit-button" type="submit" class="button" translate="yes">Submit executives</button>
         </div>
       </form>
     </div>
