--- a/src/www/account/connect/submit-stripe-account.html
+++ b/src/www/account/connect/submit-stripe-account.html
@@ -83,7 +83,7 @@
           </label>
         </div>
         <div class="nested-button form-buttons">
-          <button id="submit-button" class="button" translate="yes">Submit registration</button>
+          <button id="submit-button" type="submit" class="button" translate="yes">Submit registration</button>
         </div>
       </form>
     </div>
