--- a/src/www/account/connect/delete-stripe-account.html
+++ b/src/www/account/connect/delete-stripe-account.html
@@ -16,7 +16,7 @@
       <div id="message-container"></div>
       <form id="submit-form" method="post" class="input-form" action="/account/connect/delete-stripe-account?stripeid=${stripeAccount.id}" name="submit-form">
         <input type="hidden" name="csrf-token" />
-        <button id="submit-button" class="button" translate="yes">Delete</button>
+        <button id="submit-button" type="submit" class="button" translate="yes">Delete</button>
       </form>
     </div>
     <template id="success">
